Reverted LinkedList change - using ArrayList.remove(0) instead
Co-authored-by: ParthGaneriwala <46774949+ParthGaneriwala@users.noreply.github.com>